# open62541pp

./: .clang-format  .gitattribute  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  build.sh  main.cpp  run.sh
examples/simple-client/: CMakeLists.txt  main.cpp  run.sh
include/: applicationdescription.hpp  browsedescription.hpp  browserequest.hpp  browseresponse.hpp  browseresult.hpp  bytestring.hpp  certificate.hpp  client.hpp  datetime.hpp  diagnosticinfo.hpp  endpointdescription.hpp  enums.h  enums.hpp  expandednodeid.hpp  extensionobject.hpp  guid.hpp  identifier.hpp  localizedtext.hpp  log.hpp  node.hpp  nodeid.hpp  open62541.h  open62541.hpp  parser.hpp  qualifiedname.hpp  referencedescription.hpp  requestheader.hpp  responseheader.hpp  streamutil.hpp  usertokenpolicy.hpp  viewdescription.hpp
scripts/: build.sh  clean.sh  run-clang-format.sh  run.sh
src/: applicationdescription.cpp  browsedescription.cpp  browserequest.cpp  browseresponse.cpp  browseresult.cpp  certificate.cpp  client.cpp  datetime.cpp  diagnosticinfo.cpp  endpointdescription.cpp  expandednodeid.cpp  extensionobject.cpp  global.hpp  guid.cpp  identifier.cpp  localizedtext.cpp  log.cpp  node.cpp  nodeid.cpp  open62541.c  open62541.cpp  qualifiedname.cpp  referencedescription.cpp  requestheader.cpp  responseheader.cpp  tmp.sh  usertokenpolicy.cpp  viewdescription.cpp
test/: applicationdescription_test.cpp  browsedescription_test.cpp  browserequest_test.cpp  browseresponse_test.cpp  datetime_test.cpp  diagnosticinfo_test.cpp  endpointdescription_test.cpp  expandednodeid_test.cpp  tests.cpp  unit-tests.cpp
test/include/: common.hpp
